<resources>
    <string name="app_name">online shopping</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back">welcome back you\'ve\nbeen missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confrim_password">Confirm password</string>
    <string name="forgot_password">forgot your password?</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">create new account</string>

    <string name="create_account_title">Create Account</string>
    <string name="create_account_desc">Create an account so you can explore all the existing jobs</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact No</string>

    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already have an account</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>