<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_style"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@color/white_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_20"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:text="@string/create_account_title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@color/white"
                    style="@style/text_14"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/create_account_desc" />

                <EditText
                    android:id="@+id/signup_name"
                    style="@style/edit_16"
                    android:drawableLeft="@drawable/mail"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:maxLength="10"
                    android:id="@+id/signup_contact"
                    style="@style/edit_16"
                    android:drawableLeft="@drawable/mobile"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/contact_no"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/signup_email"
                    style="@style/edit_16"
                    android:drawableLeft="@drawable/mail"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/signup_password"
                    style="@style/edit_16"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/signup_confrim_password"
                    style="@style/edit_16"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/confrim_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/signup_signup"
                    style="@style/button_16"
                    android:text="@string/sign_up"
                    android:layout_marginTop="@dimen/_20sdp" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/signup_alredy_account"
                    style="@style/text_14"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:text="@string/already_account" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</LinearLayout>
