<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_style"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/text_20"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_gravity="center"
            android:text="@string/forgot_password_title"
            android:textColor="@color/color_red"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/forgot_password_email"
            style="@style/edit_16"
            android:drawableLeft="@drawable/mail"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/forgot_password_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/forgot_password_confirm_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/confrim_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/forgot_password_submit"
            style="@style/button_16"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_20sdp" />


    </LinearLayout>

</ScrollView>