<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    style="@style/bg_style"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/cartoon"
                app:civ_border_color="@color/black"
                app:civ_border_width="@dimen/_2sdp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_camera"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_menu_camera"
                app:civ_border_color="@color/black"
                app:civ_border_width="@dimen/_1sdp"
                app:civ_circle_background_color="@color/white" />

        </FrameLayout>

        <EditText
            android:id="@+id/profile_name"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_40sdp"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:maxLength="10"
            android:id="@+id/profile_contact"
            style="@style/edit_16"
            android:drawableLeft="@drawable/mobile"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/contact_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/profile_email"
            style="@style/edit_16"
            android:drawableLeft="@drawable/mail"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/profile_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:visibility="gone"
            android:id="@+id/profile_confrim_password"
            style="@style/edit_16"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/confrim_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/profile_edit"
            style="@style/button_16"
            android:text="Edit Profile"
            android:layout_marginTop="@dimen/_20sdp" />

        <Button
            android:visibility="gone"
            android:id="@+id/profile_update"
            style="@style/button_16"
            android:text="Submit"
            android:layout_marginTop="@dimen/_20sdp" />


    </LinearLayout>

</ScrollView>